RESOLVED FIXED237376
Verify DOM and Render text lengths are in sync in RenderTextLineBoxes::dirtyRange()
https://bugs.webkit.org/show_bug.cgi?id=237376
Summary Verify DOM and Render text lengths are in sync in RenderTextLineBoxes::dirtyR...
Brandon
Reported 2022-03-02 09:51:18 PST
Attachments
Patch (3.21 KB, patch)
2022-03-02 09:58 PST, Brandon
simon.fraser: review-
ews-feeder: commit-queue-
patch (941 bytes, patch)
2022-07-11 13:51 PDT, Brandon
brandonstewart: commit-queue-
Brandon
Comment 1 2022-03-02 09:58:05 PST
Simon Fraser (smfr)
Comment 2 2022-03-02 11:03:19 PST
Comment on attachment 453630 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=453630&action=review > Source/WebCore/rendering/RenderText.cpp:1297 > - int delta = newText.length() - text().length(); > + unsigned delta = std::abs(static_cast<int>(newText.length() - text().length())); This doesn't seem right. dirtyRange() is written to accept negative delta values; see the assertion in offsetRun(). This clamping needs to be more nuanced somehow.
Brandon
Comment 3 2022-07-11 13:51:10 PDT
Brandon
Comment 4 2022-07-22 11:17:26 PDT
EWS
Comment 5 2022-07-22 11:53:36 PDT
Committed 252736@main (22aafa30b9a2): <https://commits.webkit.org/252736@main> Reviewed commits have been landed. Closing PR #2660 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.