Verify DOM and Render text lengths are in sync in RenderTextLineBoxes::dirtyRange() https://bugs.webkit.org/show_bug.cgi?id=237376

Reviewed by Alan Bujtas.

Ensure that the DOM and Render text lengths are in sync when calling dirtyRange().
An edge case can occur when performing certain text operations like upper casing of text,
which will result in these two having differing results. This is ultimately caused by the Render
text having the modifications performed on it, while the DOM remains unchanged.

* Source/WebCore/rendering/RenderTextLineBoxes.cpp:
(WebCore::RenderTextLineBoxes::dirtyRange):

Canonical link: https://commits.webkit.org/252736@main